--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/react-dom": "18.2.6",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "mongoose": "^7.3.1",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "tabler-icons-react": "^1.56.0",
     "typescript": "5.1.3"
   }
 }
