--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "mongoose": "^7.3.1",
@@ -27,5 +29,8 @@
     "react-query": "^3.39.3",
     "tabler-icons-react": "^1.56.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2"
   }
 }
