--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.5.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "next": "13.4.7",
     "react": "18.2.0",
@@ -31,6 +33,8 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
