--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie": "^0.5.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "next": "13.4.7",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
+    "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2"
   }
 }
