--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^7.3.1",
     "next": "13.4.7",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "tabler-icons-react": "^1.56.0",
@@ -37,6 +38,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.3",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-beautiful-dnd": "^13.1.4"
   }
 }
