--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "tabler-icons-react": "^1.56.0",
     "typescript": "5.1.3"
